perf: optimize gateway with virtual threads and robust SSE parsing
- Switched to Java 21 VirtualThreadPerTaskExecutor in GatewayController for high concurrency.
- Improved Dify SSE parsing robustness with BufferedReader and input validation.
- Enhanced CollaborationManager to automatically clean Markdown code blocks from LLM JSON responses.
- Fixed potential character encoding and path variable issues in controllers.

Co-authored-by: 1192603654 <21330014+1192603654@users.noreply.github.com>